Clojure Collector: added support for POST as well as GET (#654)
Scala Common Enrich: bumped to 0.6.0
Scala Common Enrich: split out Clojure and CloudFront Collector event processing (#943)
Scala Common Enrich: filtering non-GETs from CloudfrontLoader (#944)
Scala Common Enrich: replaced all Argonaut code with json4s (#945)
Scala Common Enrich: added input adapter to convert NV pairs to JSON (#904)                                 - TODO
Scala Common Enrich: updated EnrichmentManager to process JSON fields (#903)                                - TODO
Scala Common Enrich: added parsing of request body and content type for Clojure Collector raw events (#930) - TODO
Scala Hadoop Enrich: bumped to 0.7.0                                                                        - TODO
Scala Hadoop Enrich: bumped to Scala Common Enrich 0.6.0 (#940)                                             - TODO
Scala Hadoop Enrich: updated to support generating multiple enriched events from one raw payload (#902)     - TODO
StorageLoader: bumped to 0.3.2
StorageLoader: removed EMPTYASNULL for loading JSONs (#942)                                                 - TODO
StorageLoader: wrote JSON Path file for mobile_context (#776)
Redshift: added Redshift DDL for mobile_context (#542)

Version 0.9.7 (2014-09-02)
--------------------------
Ruby Tracker: bumped git submodule to 0.3.0 (#939)
Java Tracker: bumped git submodule to 0.5.1 (#948)
Node.js Tracker: added git submodule. Version 0.1.0 (#949)
Trackers: fixed broken git submodule links, thanks @OAGr! (#957)
EmrEtlRunner: bumped to 0.9.1
EmrEtlRunner: fixed @jobflow.ec2_subnet_id not being set due to incorrect guard, thanks @rslifka! (#956)
EmrEtlRunner: fixed bugs in --process-bucket (#973)
EmrEtlRunner: renamed --process-bucket option to --process-enrich (#972)
EmrEtlRunner: changed -s option for --skip to -x prevent clash with -s for --start (#975)
EmrEtlRunner: now allows shredding without prior enrichment (#927)